--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,7 +133,7 @@ jobs:
           ---
           
           <div align="center">
-            <img src="https://github-readme-stats.vercel.app/api?username=IGCrystal&show_icons=true&theme=radical" alt="GitHub Stats" />
+            <img src="https://github-readme-stats.vercel.app/api?username=Pine-Ln&show_icons=true&theme=radical" alt="GitHub Stats" />
           </div>
           
           <div align="center">
